--- a/login.css
+++ b/login.css
@@ -66,14 +66,14 @@ span.psw {
   width: 100%; 
   height: 100%; 
   overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.4); 
+  background-color: white;
+  
   padding-top: 60px;
 }
 
 
 .modal-content {
-  background-color: #fefefe;
+  background-color: white;
   margin: 5% auto 15% auto; 
   border: 1px solid #888;
   width: 30%;
