--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 .hero {
-    gitbackground-image: url("img/back.jpg") ;
+    background-image: url("img/back.jpg") ;
     background-size: cover;
     width: 100%;
     height: 750px;
